--- a/app/views/months/new.html.erb
+++ b/app/views/months/new.html.erb
@@ -1,14 +1,11 @@
 <h3>Month Form</h3>
 
 <%= form_tag months_path do %>
-	<label>New Month!</label>
-	<br></br>
+	<label>Month:</label><br>
+	<%= text_field_tag :month_name %><br>
 
-	<label>Month:</label>
-	<%= text_field_tag :'month_name'%><br>
-
-	<label>Focus:</label>
-	<%= text_field_tag :'month_focus'%><br>
+	<label>Focus:</label><br>
+	<%= text_field_tag :month_focus %><br>
 
 	<%= submit_tag "Submit" %>
 <% end %>
