added all fields to day new view

--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -8,6 +8,71 @@
 	<%= text_area_tag :day_grateful_1 %><br>
 	<%= text_area_tag :day_grateful_2 %><br>
 	<%= text_area_tag :day_grateful_3 %><br>
+
+
+	<label>3 things you are excited for</label><br>
+	<%= text_area_tag :day_excited_1 %><br>
+	<%= text_area_tag :day_excited_2 %><br>
+	<%= text_area_tag :day_excited_3 %><br>
+
+	<label>Affirmation: </label><br>
+	<%= text_area_tag :day_affirmation %><br>
+
+	<label>Focus: </label><br>
+	<%= text_area_tag :day_focus %><br>
+
+	<label>Exercise: </label><br>
+	<%= text_area_tag :day_exercise %><br>
+
+	<label>Priorities: </label><br>
+	<%= text_area_tag :day_priority_1 %><br>
+	<%= text_area_tag :day_priority_2 %><br>
+	<%= text_area_tag :day_priority_3 %><br>
+	<%= text_area_tag :day_priority_4 %><br>
+	<%= text_area_tag :day_priority_5 %><br>
+
+	<label>Schedule: </label><br>
+	<%= text_area_tag :day_hour_6 %><br>
+	<%= text_area_tag :day_hour_7 %><br>
+	<%= text_area_tag :day_hour_8 %><br>
+	<%= text_area_tag :day_hour_9 %><br>
+	<%= text_area_tag :day_hour_10 %><br>
+	<%= text_area_tag :day_hour_11 %><br>
+	<%= text_area_tag :day_hour_12 %><br>
+	<%= text_area_tag :day_hour_13 %><br>
+	<%= text_area_tag :day_hour_14 %><br>
+	<%= text_area_tag :day_hour_15 %><br>
+	<%= text_area_tag :day_hour_16 %><br>
+	<%= text_area_tag :day_hour_17 %><br>
+	<%= text_area_tag :day_hour_18 %><br>
+	<%= text_area_tag :day_hour_19 %><br>
+	<%= text_area_tag :day_hour_20 %><br>
+	<%= text_area_tag :day_hour_21 %><br>
+
+
+	<label>Tasks: </label><br>
+	<%= text_area_tag :day_task_1 %><br>
+	<%= text_area_tag :day_task_2 %><br>
+	<%= text_area_tag :day_task_3 %><br>
+	<%= text_area_tag :day_task_4 %><br>
+	<%= text_area_tag :day_task_5 %><br>
+	<%= text_area_tag :day_task_6 %><br>
+	<%= text_area_tag :day_task_7 %><br>
+	<%= text_area_tag :day_task_8 %><br>
+	<%= text_area_tag :day_task_9 %><br>
+	<%= text_area_tag :day_task_10 %><br>
+
+
+	<label>Notes: </label><br>
+	<%= text_area_tag :day_notes %><br>
+
+	<label>Wins of the Day: </label><br>
+	<%= text_area_tag :day_win_1 %><br>
+	<%= text_area_tag :day_win_2 %><br>
+	<%= text_area_tag :day_win_3 %><br>
+
+	<label>Improvements for Tomorrow: </label><br>
+	<%= text_area_tag :day_day_improvement %><br>
  
 	<%= submit_tag "Submit Day" %>
 <% end %>
