edited edit new days views

--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -1,78 +1,78 @@
 <h3>Day Form</h3>
 
-<%= form_tag days_path do %>
+<%= form_for(@day) do |f| %>
 	<label>Day and date:</label><br>
-	<%= text_field_tag :day_day_date %><br>
+	<%= f.text_field :day_day_date %><br>
  
 	<label>3 things you are grateful for</label><br>
-	<%= text_area_tag :day_grateful_1 %><br>
-	<%= text_area_tag :day_grateful_2 %><br>
-	<%= text_area_tag :day_grateful_3 %><br>
+	<%= f.text_field :day_grateful_1 %><br>
+	<%= f.text_field :day_grateful_2 %><br>
+	<%= f.text_field :day_grateful_3 %><br>
 
 
 	<label>3 things you are excited for</label><br>
-	<%= text_area_tag :day_excited_1 %><br>
-	<%= text_area_tag :day_excited_2 %><br>
-	<%= text_area_tag :day_excited_3 %><br>
+	<%= f.text_field :day_excited_1 %><br>
+	<%= f.text_field :day_excited_2 %><br>
+	<%= f.text_field :day_excited_3 %><br>
 
 	<label>Affirmation: </label><br>
-	<%= text_area_tag :day_affirmation %><br>
+	<%= f.text_field :day_affirmation %><br>
 
 	<label>Focus: </label><br>
-	<%= text_area_tag :day_focus %><br>
+	<%= f.text_field :day_focus %><br>
 
 	<label>Exercise: </label><br>
-	<%= text_area_tag :day_exercise %><br>
+	<%= f.text_field :day_exercise %><br>
 
 	<label>Priorities: </label><br>
-	<%= text_area_tag :day_priority_1 %><br>
-	<%= text_area_tag :day_priority_2 %><br>
-	<%= text_area_tag :day_priority_3 %><br>
-	<%= text_area_tag :day_priority_4 %><br>
-	<%= text_area_tag :day_priority_5 %><br>
+	<%= f.text_field :day_priority_1 %><br>
+	<%= f.text_field :day_priority_2 %><br>
+	<%= f.text_field :day_priority_3 %><br>
+	<%= f.text_field :day_priority_4 %><br>
+	<%= f.text_field :day_priority_5 %><br>
 
 	<label>Schedule: </label><br>
-	<%= text_area_tag :day_hour_6 %><br>
-	<%= text_area_tag :day_hour_7 %><br>
-	<%= text_area_tag :day_hour_8 %><br>
-	<%= text_area_tag :day_hour_9 %><br>
-	<%= text_area_tag :day_hour_10 %><br>
-	<%= text_area_tag :day_hour_11 %><br>
-	<%= text_area_tag :day_hour_12 %><br>
-	<%= text_area_tag :day_hour_13 %><br>
-	<%= text_area_tag :day_hour_14 %><br>
-	<%= text_area_tag :day_hour_15 %><br>
-	<%= text_area_tag :day_hour_16 %><br>
-	<%= text_area_tag :day_hour_17 %><br>
-	<%= text_area_tag :day_hour_18 %><br>
-	<%= text_area_tag :day_hour_19 %><br>
-	<%= text_area_tag :day_hour_20 %><br>
-	<%= text_area_tag :day_hour_21 %><br>
+	<%= f.text_field :day_hour_6 %><br>
+	<%= f.text_field :day_hour_7 %><br>
+	<%= f.text_field :day_hour_8 %><br>
+	<%= f.text_field :day_hour_9 %><br>
+	<%= f.text_field :day_hour_10 %><br>
+	<%= f.text_field :day_hour_11 %><br>
+	<%= f.text_field :day_hour_12 %><br>
+	<%= f.text_field :day_hour_13 %><br>
+	<%= f.text_field :day_hour_14 %><br>
+	<%= f.text_field :day_hour_15 %><br>
+	<%= f.text_field :day_hour_16 %><br>
+	<%= f.text_field :day_hour_17 %><br>
+	<%= f.text_field :day_hour_18 %><br>
+	<%= f.text_field :day_hour_19 %><br>
+	<%= f.text_field :day_hour_20 %><br>
+	<%= f.text_field :day_hour_21 %><br>
 
 
 	<label>Tasks: </label><br>
-	<%= text_area_tag :day_task_1 %><br>
-	<%= text_area_tag :day_task_2 %><br>
-	<%= text_area_tag :day_task_3 %><br>
-	<%= text_area_tag :day_task_4 %><br>
-	<%= text_area_tag :day_task_5 %><br>
-	<%= text_area_tag :day_task_6 %><br>
-	<%= text_area_tag :day_task_7 %><br>
-	<%= text_area_tag :day_task_8 %><br>
-	<%= text_area_tag :day_task_9 %><br>
-	<%= text_area_tag :day_task_10 %><br>
+	<%= f.text_field :day_task_1 %><br>
+	<%= f.text_field :day_task_2 %><br>
+	<%= f.text_field :day_task_3 %><br>
+	<%= f.text_field :day_task_4 %><br>
+	<%= f.text_field :day_task_5 %><br>
+	<%= f.text_field :day_task_6 %><br>
+	<%= f.text_field :day_task_7 %><br>
+	<%= f.text_field :day_task_8 %><br>
+	<%= f.text_field :day_task_9 %><br>
+	<%= f.text_field :day_task_10 %><br>
 
 
 	<label>Notes: </label><br>
-	<%= text_area_tag :day_notes %><br>
+	<%= f.text_field :day_notes %><br>
 
 	<label>Wins of the Day: </label><br>
-	<%= text_area_tag :day_win_1 %><br>
-	<%= text_area_tag :day_win_2 %><br>
-	<%= text_area_tag :day_win_3 %><br>
+	<%= f.text_field :day_win_1 %><br>
+	<%= f.text_field :day_win_2 %><br>
+	<%= f.text_field :day_win_3 %><br>
 
 	<label>Improvements for Tomorrow: </label><br>
-	<%= text_area_tag :day_day_improvement %><br>
+	<%= f.text_field :day_day_improvement %><br>
  
-	<%= submit_tag "Submit Day" %>
+	<%= f.submit %>
 <% end %>
