--- a/app/views/days/edit.html.erb
+++ b/app/views/days/edit.html.erb
@@ -5,9 +5,9 @@
   <%= f.text_field :day_day_date %><br>
  
   <label>3 things you are grateful for</label><br>
-  <%= f.text_area :day_grateful_1 %><br>
-  <%= f.text_area :day_grateful_2 %><br>
-  <%= f.text_area :day_grateful_3 %><br>
+  <%= f.text_field :day_grateful_1 %><br>
+  <%= f.text_field :day_grateful_2 %><br>
+  <%= f.text_field :day_grateful_3 %><br>
  
   <%= f.submit %>
 <% end %>
