edited due to server errors

--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -72,7 +72,7 @@
 	<%= f.text_field :day_win_3 %><br>
 
 	<label>Improvements for Tomorrow: </label><br>
-	<%= f.text_field :day_day_improvement %><br>
+	<%= f.text_field :day_improvement %><br>
  
 	<%= f.submit %>
 <% end %>
