--- a/app/views/hours/edit.html.erb
+++ b/app/views/hours/edit.html.erb
@@ -1,8 +1,8 @@
-<h3>Hour Form</h3>
+<h1>Edit Hour Form</h1>
 
 <%= form_for(@hour) do |f| %>
-  <label>hours number:</label><br>
-  <%= f.text_field :hours_number %><br>
+	<label>Hour number:</label><br>
+	<%= f.text_field :hour_number %><br>
  
-  <%= f.submit %>
+	<%= f.submit %>
 <% end %>
