--- a/app/views/weeks/edit.html.erb
+++ b/app/views/weeks/edit.html.erb
@@ -1,17 +1,61 @@
-<h3>Week Form</h3>
+<h1>Edit Week Form</h1>
 
 <%= form_for(@week) do |f| %>
-  <label>New Week!</label>
-  <br></br>
-
-  <label>Day and Date:</label>
-  <%= f.text_field :week_day_date %><br>
-
-  <label>Big Win:</label>
-  <%= f.text_field :week_big_win_1 %><br>
-
-  <label>Improvement 1:</label>
-  <%= f.text_field :week_improvement_1 %><br>
+	<label>Day and date:</label><br>
+	<%= f.text_field :week_day_date %><br>
  
-  <%= f.submit %>
+	<label>Wins of the previous week: </label><br>
+	1. <%= f.text_field :week_big_win_1 %><br>
+	2. <%= f.text_field :week_big_win_2 %><br>
+	3. <%= f.text_field :week_big_win_3 %><br>
+	4. <%= f.text_field :week_big_win_4 %><br>
+	5. <%= f.text_field :week_big_win_5 %><br>
+
+	<label>Improvements for the next week: </label><br>
+	1. <%= f.text_field :week_improvement_1 %><br>
+	2. <%= f.text_field :week_improvement_2 %><br>
+
+	<h3>Goals for each section: </h3>
+	<label>Personal: </label><br>
+	<%= f.text_field :week_personal %><br>
+
+	<label>Work: </label><br>
+	<%= f.text_field :week_work %><br>
+
+	<label>Family/Friends: </label><br>
+	<%= f.text_field :week_family_friends %><br>
+
+	<label>Relationships: </label><br>
+	<%= f.text_field :week_relationship %><br>
+
+	<label>Looking forward: </label><br>
+	1. <%= f.text_field :week_forward_1 %><br>
+	2. <%= f.text_field :week_forward_2 %><br>
+	3. <%= f.text_field :week_forward_3 %><br>
+
+	<label>Habits: </label><br>
+	1. <%= f.text_field :week_habit_1 %><br>
+	2. <%= f.text_field :week_habit_2 %><br>
+
+	<label>Learn: </label><br>
+	<%= f.text_field :week_learn %><br>
+
+	<label>Passion Project: </label><br>
+	<%= f.text_field :week_passion %><br>
+
+	<label>Projects: </label><br>
+	1. <%= f.text_field :week_project_1 %><br>
+	2. <%= f.text_field :week_project_2 %><br>
+	3. <%= f.text_field :week_project_3 %><br>
+	4. <%= f.text_field :day_priority_4 %><br>
+
+	<label>Goals: </label><br>
+	1. <%= f.text_field :week_goal_1 %><br>
+	2. <%= f.text_field :week_goal_2 %><br>
+	3. <%= f.text_field :week_goal_3 %><br>
+	4. <%= f.text_field :week_goal_4 %><br>
+	5. <%= f.text_field :week_goal_5 %><br>
+
+ 
+	<%= f.submit %>
 <% end %>
