fixed set params, new views

--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -68,7 +68,7 @@
 	2. <%= f.text_field :day_win_2 %><br>
 	3. <%= f.text_field :day_win_3 %><br>
 
-	<label>Improvements for Tomorrow: </label><br>
+	<label>Improvement for Tomorrow: </label><br>
 	<%= f.text_field :day_improvement %><br>
  
 	<%= f.submit %>
