--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% if user_signed_in? %>
       <li>Signed in as <%= current_user.email %></li>
-      <li> <%= link_to 'Home', month_path %> </li>
+      <li> <%= link_to 'Home', planner_path %> </li>
       <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
     <% else %>
       <li><%= link_to 'sign in', new_user_session_path %></li>
