--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
   <li>Signed in as <%= current_user.email %></li>
-  <li> <%= link_to "Store Home", store_path %> </li>
+  <li> <%= link_to "Planner Home", store_path %> </li>
   <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li><%= link_to 'sign in', new_user_session_path %></li>
