--- a/app/views/months/index.html.erb
+++ b/app/views/months/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Here are all of your months:</h1>
 
 <% @months.each do |month| %>
-  <%= @month.month_name %>
+  <li><%= link_to month.month_name, month_path(month) %></li>
 <% end %>
