--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -1,25 +1,20 @@
-<h1><%= @day.day_day_date %></h1>
+<h1>Day of: <%= @day.day_day_date %></h1>
 
 <div>
 	<h2>3 things you are grateful for</h2>
 		<p>1. <%= @day.day_grateful_1 %></p>
 		<p>2. <%= @day.day_grateful_2 %></p>
 		<p>3. <%= @day.day_grateful_3 %></p>
-		<br></br>
 	<h2>3 things you are excited for</h2>
 		<p>1. <%= @day.day_excited_1 %></p>
 		<p>2. <%= @day.day_excited_2 %></p>
 		<p>3. <%= @day.day_excited_3 %></p>
-		<br></br>
 	<h2>Affirmation</h2>
 		<p><%= @day.day_affirmation %></p>
-		<br></br>
 	<h2>Focus</h2>
 		<p><%= @day.day_focus %></p>
-		<br></br>
 	<h2>Exercise</h2>
 		<p><%= @day.day_exercise %></p>
-		<br></br>
 	<h2>Priorities</h2>
 		<p>1. <%= @day.day_priority_1 %></p>
 		<p>2. <%= @day.day_priority_2 %></p>
