fixed day actions routes and views

--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -3,3 +3,10 @@
 <% @days.each do |day| %>
   <li><%= link_to day.day_day_date, day_path(day) %></li>
 <% end %>
+
+
+<br><%= link_to('Create a new day', new_day_path) %>
+
+
+
+
