--- a/app/views/months/new.html.erb
+++ b/app/views/months/new.html.erb
@@ -1,5 +1,20 @@
 <h1>New Month Form</h1>
 
+<% if @month.errors.any? %> #shouldnt need this if form_for works correctly
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@month.errors.count, "error") %>
+      prohibited this month from being saved:
+    </h2>
+ 
+    <ul>
+    <% @month.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for(@month) do |f| %>
 	<label>Month:</label><br>
 	<%= f.text_field :month_name %><br>
