--- a/app/views/months/show.html.erb
+++ b/app/views/months/show.html.erb
@@ -29,7 +29,8 @@
 		<p>3. <%= @month.month_insight_3 %></p>
 </div>
 
-
+<%= link_to("Edit #{@month.month_name}", edit_month_path) %><br>
+<%= link_to("Delete #{@month.month_name}", month_path(@month), method: :delete, data: { confirm: 'Are you sure?' } ) %>
 
 
 
