--- a/app/views/months/new.html.erb
+++ b/app/views/months/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Month Form</h1>
 
-<% if @month.errors.any? %> #shouldnt need this if form_for works correctly
+<% if @month.errors.any? %>
   <div id="error_explanation">
     <h2>
       <%= pluralize(@month.errors.count, "error") %>
