--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -1,5 +1,20 @@
 <h1>New Week Form</h1>
 
+<% if @week.errors.any? %> 
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@week.errors.count, "error") %>
+      prohibited this day from being saved:
+    </h2>
+ 
+    <ul>
+    <% @week.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for(@week) do |f| %>
 	<label>Day and date:</label><br>
 	<%= f.text_field :week_day_date %><br>
