--- a/app/views/planner/index.html.erb
+++ b/app/views/planner/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Welcome to the Planner on Rails App!</h1>
+
+<body>
+  <% if user_signed_in? %>
+      <%= link_to "Months", months_path %>
+      <%= link_to "Weeks", weeks_path %>
+      <%= link_to "Days", days_path %>
+  <% end %>
+</body>
