--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
     <% if user_signed_in? %>
         <ul class="nav navbar-nav navbar-left">
-            <li>Signed in as <%= current_user.email %></li>
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "Months", months_path %></li>
             <li><%= link_to "Weeks", weeks_path %></li>
+            <li><%= link_to "Days", days_path %></li>
             <li><%= link_to "Settings", edit_user_registration_path %></li>
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         </ul>
