--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -4,7 +4,7 @@
   <div id="error_explanation">
     <h2>
       <%= pluralize(@week.errors.count, "error") %>
-      prohibited this day from being saved:
+      prohibited this week from being saved:
     </h2>
  
     <ul>
@@ -70,6 +70,15 @@
 	4. <%= f.text_field :week_goal_4 %><br>
 	5. <%= f.text_field :week_goal_5 %><br>
 
- 
+ 	<label>Belongs to which months?</label><br>
+ 	<%= f.collection_check_boxes :month_ids, Month.all, :id, :month_name %>
+    <br>
+    <label>If you don't see the month you're looking for, create one below:</label><br>
+    <%= f.fields_for :months, @week.months.build do |month_fields| %>
+    	<%= month_fields.label :month_name, "New Month Name" %>
+    	<%= month_fields.text_field :month_name %>
+    <% end %><br>
+
+
 	<%= f.submit %>
 <% end %>
