--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Week of: <%= @week.week_day_date %></h1>
-
+<h2>In Month(s): 
+	<%= @week.months.ids %> 
+	</h2>
 <div>
 	<h2>Wins of the previous week:</h2>
 		<p>1. <%= @week.week_big_win_1 %></p>
