join table connect

--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Week of: <%= @week.week_day_date %></h1>
 <h2>In Month(s): 
-	<%= @week.months.ids %> 
+	<%= @weeks_months_ids %> 
 	</h2>
 <div>
 	<h2>Wins of the previous week:</h2>
