--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -71,7 +71,7 @@
 	5. <%= f.text_field :week_goal_5 %><br>
 
  	<label>Belongs to which months?</label><br>
- 	<%= f.collection_check_boxes :month_ids, Month.all, :id, :month_name %>
+ 	<%= f.collection_check_boxes :month_ids, @user.months.all, :id, :month_name %>
     <br>
 
 	<%= f.submit %>
