weeks view working

--- a/app/views/weeks/index.html.erb
+++ b/app/views/weeks/index.html.erb
@@ -2,6 +2,6 @@
 <%=@user.id%>
 <h1>Here are all of your weeks:</h1>
 
-<% @weeks.each do |week| %>
+<% @weeks.all.each do |week| %>
   <li><%= link_to week.week_day_date, week_path(week) %></li>
 <% end %>
