--- a/app/views/weeks/show.html.erb
+++ b/app/views/weeks/show.html.erb
@@ -2,7 +2,7 @@
 <h2>In Month(s): 
 	<%= @weeks_months_ids %> 
 	</h2>
-<h2>Belongs to: <%= @user.id %></h2>
+<h2>Belongs to: <%= @week.user_id %></h2>
 <div>
 	<h2>Wins of the previous week:</h2>
 		<p>1. <%= @week.week_big_win_1 %></p>
