weeks are showing

--- a/app/views/weeks/index.html.erb
+++ b/app/views/weeks/index.html.erb
@@ -1,7 +1,9 @@
 
-<%=@user.id%>
+<%=@test%>
 <h1>Here are all of your weeks:</h1>
 
 <% @weeks.all.each do |week| %>
   <li><%= link_to week.week_day_date, week_path(week) %></li>
 <% end %>
+
+<p>not working</p>
