--- a/app/views/months/new.html.erb
+++ b/app/views/months/new.html.erb
@@ -55,6 +55,9 @@
 
 	    <%= week.label :week_day_date %>
 	    <%= week.text_field :week_day_date %><br>
+
+	    <label> Enter your user ID, <%= @month.user_id %>, in the box:</label>
+	    <%= week.text_field :user_id %><br>
 	    
 	<% end %>
  
