--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -18,6 +18,9 @@
 <%= form_for(@day) do |f| %>
 	<label>Day and date:</label><br>
 	<%= f.text_field :day_day_date %><br>
+
+	<label>Your user id in the box below:</label><br>
+	<%= f.text_field :user_id %><br>
  
 	<label>3 things you are grateful for</label><br>
 	1. <%= f.text_field :day_grateful_1 %><br>
