refactored new and edit views

--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -16,67 +16,4 @@
   </div>
 <% end %>
 
-<%= form_for(@week) do |f| %>
-	<label>Day and date:</label><br>
-	<%= f.text_field :week_day_date %><br>
-
-	<label>Your user id in the box below:</label><br>
-	<%= f.text_field :user_id %><br>
- 
-	<label>Wins of the previous week: </label><br>
-	1. <%= f.text_field :week_big_win_1 %><br>
-	2. <%= f.text_field :week_big_win_2 %><br>
-	3. <%= f.text_field :week_big_win_3 %><br>
-	4. <%= f.text_field :week_big_win_4 %><br>
-	5. <%= f.text_field :week_big_win_5 %><br>
-
-	<label>Improvements for the next week: </label><br>
-	1. <%= f.text_field :week_improvement_1 %><br>
-	2. <%= f.text_field :week_improvement_2 %><br>
-
-	<h3>Goals for each section: </h3>
-	<label>Personal: </label><br>
-	<%= f.text_field :week_personal %><br>
-
-	<label>Work: </label><br>
-	<%= f.text_field :week_work %><br>
-
-	<label>Family/Friends: </label><br>
-	<%= f.text_field :week_family_friends %><br>
-
-	<label>Relationships: </label><br>
-	<%= f.text_field :week_relationship %><br>
-
-	<label>Looking forward: </label><br>
-	1. <%= f.text_field :week_forward_1 %><br>
-	2. <%= f.text_field :week_forward_2 %><br>
-	3. <%= f.text_field :week_forward_3 %><br>
-
-	<label>Habits: </label><br>
-	1. <%= f.text_field :week_habit_1 %><br>
-	2. <%= f.text_field :week_habit_2 %><br>
-
-	<label>Learn: </label><br>
-	<%= f.text_field :week_learn %><br>
-
-	<label>Passion Project: </label><br>
-	<%= f.text_field :week_passion %><br>
-
-	<label>Projects: </label><br>
-	1. <%= f.text_field :week_project_1 %><br>
-	2. <%= f.text_field :week_project_2 %><br>
-	3. <%= f.text_field :week_project_3 %><br>
-
-	<label>Goals: </label><br>
-	1. <%= f.text_field :week_goal_1 %><br>
-	2. <%= f.text_field :week_goal_2 %><br>
-	3. <%= f.text_field :week_goal_3 %><br>
-	4. <%= f.text_field :week_goal_4 %><br>
-	5. <%= f.text_field :week_goal_5 %><br>
-
- 	<label>Belongs to which months?</label><br>
- 	<%= f.collection_check_boxes :month_ids, @user.months.all, :id, :month_name %>
-    <br>
-
-	<%= f.submit %>
-<% end %>
+<%= render 'weeks/form' %>
