--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Day Form</h1>
 
 <% if @day.errors.any? %>
-  <div id="error_explanation">
+  <div id="fields_with_errors">
     <h2>
       <%= pluralize(@day.errors.count, "error") %>
       prohibited this day from being saved:
