--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,6 @@
    <ul>
     	<li><%= link_to 'Sign in', new_user_session_path %></li>
     	<li><%= link_to 'Sign up', new_user_registration_path %></li>
-    	<li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
+    	<li><%= link_to "Sign in with Github", user_github_omniauth_authorize_path %></li>
 	</ul>
 </div>
