--- a/app/views/months/show.html.erb
+++ b/app/views/months/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Month of: <%= @month.month_name %></h1>
 
+<h1>User ID: <%= @month.user_id %></h1>
+
 <div>
 	<h2>Focus:</h2>
 		<p><%= @month.month_focus %></p>
@@ -29,12 +31,6 @@
 		<p>3. <%= @month.month_insight_3 %></p>
 </div>
 
-<div>
-	<h2>Weeks of this month:</h2>
-		<% @month.weeks.each do |week| %>
-  			<p><%= "#{week.week_number}. "%><%= link_to week.week_day_date, week_path(week) %></p>
-		<% end %>
-</div>
 
 <%= link_to("Edit #{@month.month_name}", edit_month_path) %><br>
 <%= link_to("Delete #{@month.month_name}", month_path(@month), method: :delete, data: { confirm: 'Are you sure?' } ) %>
