--- a/app/views/layouts/_new_links.html.erb
+++ b/app/views/layouts/_new_links.html.erb
@@ -4,6 +4,8 @@
             <li><%= link_to "Create a new Month", new_month_path %></li>
             <li><%= link_to "Create a new Week", new_week_path %></li>
             <li><%= link_to "Create a new Day", new_day_path %></li>
+            <li><%= link_to "Create a new Hour", new_hour_path %></li>
+            <li><%= link_to "Create a new Task", new_task_path %></li>
         </ul>
     <% end %>
 </div>
