--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -5,6 +5,8 @@
             <li><%= link_to "Months", months_path %></li>
             <li><%= link_to "Weeks", weeks_path %></li>
             <li><%= link_to "Days", days_path %></li>
+            <li><%= link_to "Hours", hours_path %></li>
+            <li><%= link_to "Tasks", tasks_path %></li>
             <li><%= link_to "Settings", edit_user_registration_path %></li>
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         </ul>
