--- a/app/views/days/_form.html.erb
+++ b/app/views/days/_form.html.erb
@@ -76,18 +76,14 @@
 	<label>Tasks: </label><br>
 	<%= f.collection_check_boxes :task_ids, Task.all, :id, :task_content %><br>
 
-	<label>Or create a Hour through Tasks: </label><br>
+	<label>Or create a new Task: </label><br>
 	<%= f.fields_for :tasks, @day.tasks.build do |tasks_fields| %>
-		<%= tasks_fields.text_field :task_content %>
+		<%= tasks_fields.text_field :task_content %><br>
 	<% end %>
 
 	<label>Hours through Tasks: </label><br>
 	<%= f.collection_check_boxes :hour_ids, Hour.all, :id, :hour_number, include_blank: 'Try' %><br>
 
-	<label>Or create a Hour through Tasks: </label><br>
-	<%= f.fields_for :hours, @day.hours.build do |hours_fields| %>
-		<%= hours_fields.text_field :hour_number %>
-	<% end %>
 
  
 	<%= f.submit %>
