--- a/app/views/weeks/_form.html.erb
+++ b/app/views/weeks/_form.html.erb
@@ -55,6 +55,8 @@
 	4. <%= f.text_field :week_goal_4 %><br>
 	5. <%= f.text_field :week_goal_5 %><br>
 
+	<label>Belongs to which months?</label><br>
+	<%= f.collection_check_boxes :month_ids, @user.months.all, :id, :month_name %><br>
 
 
 	<%= f.submit %>
